# mc-cli

./: .gitignore  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: k88gaz1424jva37kkizl3asw3z2w0006-source
mc_cli/: main.py
mc_installer/: check_serverside.py  main.py
test_pack/: README.txt  manifest.json  modlist.html  server.json
test_pack/config/: ShretNether-common.toml  advancedcompass-client.toml  alexsmobs.toml  difficultylock-common.toml  divine_missions-common.toml  dragonfight-common.toml  dusk-common.toml  enhancedai-common.toml  epicfight-client.toml  epicfight.toml  fallingleaves-client-1.toml.bak  firstjoinmessage-common.toml  forgivingvoid-common.toml  healthoverlay.toml  iceandfire-common.toml  inventoryhud-client.toml  itemborders-common.toml  itemstitchingfix-client.toml  legendarytooltips-common.toml  locks-common.toml  lootbeams-client.toml  majruszs-difficulty-common.toml  mmorpg-client.toml  mmorpg-common.toml  mobsunscreen-common.toml  mowziesmobs-common.toml  mutantmore-common.toml  overloadedarmorbar-client.toml  packmenu.cfg  pehkui-common.toml  playerex-client.toml  playerex-common.toml  quark-common.toml  rare-ice.properties  shieldmechanics-common.toml  skeletonhorsespawn-common.toml  smallships-common.toml  soundfilters-client.toml  subwild-common.toml  supplementaries-client.toml  (+8 more)
test_pack/config/dsurround/: sndctrl-client.toml
test_pack/config/jei/: ingredient-list-mod-sort-order.ini  (+1 more)
(+54 files in other folders)
