
[tool.poetry]
name = "mc_cli"
version = "0.1.0"
description = ""
authors = ["flashgnash"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"

[tool.poetry.scripts]
mc-cli = "mc-cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
