
[tool.poetry]
name = "mc-installer"
version = "0.1.0"
description = ""
authors = ["flashgnash"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
tqdm = "^4.66.4"

[tool.poetry.scripts]
mc-installer = "mc_cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
